<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_discovery_settings_sex"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:text="@string/activity_discovery_settings_man"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:text="@string/activity_discovery_settings_woman"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:text="@string/activity_discovery_settings_both"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/activity_discovery_settings_age"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_range_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/range_seekbar_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="10dp"
                app:bar_color="@color/colorAccentWhite"
                app:bar_highlight_color="@color/colorAccent"
                app:corner_radius="1"
                app:data_type="_integer"
                app:left_thumb_color="@color/colorAccent"
                app:left_thumb_color_pressed="@color/colorAccentWhite"
                app:max_value="60"
                app:min_value="18"
                app:right_thumb_color="@color/colorAccent"
                app:right_thumb_color_pressed="@color/colorAccentWhite"
                app:steps="1" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/activity_discovery_settings_distance"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_range_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <com.crystal.crystalrangeseekbar.widgets.CrystalSeekbar
                android:id="@+id/range_seekbar_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="10dp"
                app:bar_color="@color/colorAccentWhite"
                app:bar_highlight_color="@color/colorAccent"
                app:corner_radius="1"
                app:data_type="_integer"
                app:left_thumb_color="@color/colorAccent"
                app:left_thumb_color_pressed="@color/colorAccentWhite"
                app:max_value="160"
                app:min_value="2"
                app:right_thumb_color="@color/colorAccent"
                app:right_thumb_color_pressed="@color/colorAccentWhite"
                app:steps="1" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/activity_discovery_settings_using"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/activity_discovery_settings_position"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/activity_discovery_settings_show"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/textView1"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
